--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Interactive Learning for Autistic Children</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <select id="categorySelector">
+        <option value="1">Activities</option>
+        <option value="2">Food</option>
+        <option value="3">Emotions</option>
+    </select>
+
+    <div class="gallery" id="imageGallery">
+        <!-- Images will be loaded here dynamically -->
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
