--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <!-- Images will be loaded here dynamically -->
     </div>
 
+    <div class="fixed-bar">Select an item</div>
+
     <script src="script.js"></script>
 </body>
 </html>
